--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
   <parent>
     <groupId>org.metadatacenter</groupId>
     <artifactId>cedar-parent</artifactId>
-    <version>1.8.2-SNAPSHOT</version>
+    <version>1.8.2</version>
   </parent>
 
   <groupId>org.metadatacenter</groupId>
   <artifactId>cedar-archetype-instance-writer</artifactId>
-  <version>1.6.4-SNAPSHOT</version>
+  <version>1.8.2</version>
   <packaging>jar</packaging>
   <name>Minimal Java project that uses jsonschema2pojo to generate Java classes to write CEDAR JSON Schema-based template instances</name>
 
