--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
   <groupId>org.metadatacenter</groupId>
   <artifactId>cedar-archetype-instance-writer</artifactId>
-  <version>2.1.6</version>
+  <version>2.1.7-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>Minimal Java project that uses jsonschema2pojo to generate Java classes to write CEDAR JSON Schema-based template instances</name>
 
@@ -17,7 +17,7 @@
     <connection>scm:git:git@github.com:metadatacenter/cedar-archetype-instance-writer.git</connection>
     <developerConnection>scm:git:git@github.com:metadatacenter/cedar-archetype-instance-writer.git</developerConnection>
     <url>https://github.com/metadatacenter/cedar-archetype-instance-writer</url>
-    <tag>release-2.1.6</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <dependencies>
