--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
   <parent>
     <groupId>org.metadatacenter</groupId>
     <artifactId>cedar-parent</artifactId>
-    <version>2.2.8</version>
+    <version>2.2.9-SNAPSHOT</version>
   </parent>
 
   <groupId>org.metadatacenter</groupId>
   <artifactId>cedar-archetype-instance-writer</artifactId>
-  <version>2.2.8-SNAPSHOT</version>
+  <version>2.2.8</version>
   <packaging>jar</packaging>
   <name>Minimal Java project that uses jsonschema2pojo to generate Java classes to write CEDAR JSON Schema-based template instances</name>
 
@@ -17,7 +17,7 @@
     <connection>scm:git:git@github.com:metadatacenter/cedar-archetype-instance-writer.git</connection>
     <developerConnection>scm:git:git@github.com:metadatacenter/cedar-archetype-instance-writer.git</developerConnection>
     <url>https://github.com/metadatacenter/cedar-archetype-instance-writer</url>
-    <tag>HEAD</tag>
+    <tag>release-2.2.8</tag>
   </scm>
 
   <dependencies>
