SCM changed to https

--- a/pom.xml
+++ b/pom.xml
@@ -14,10 +14,9 @@
   <name>Minimal Java project that uses jsonschema2pojo to generate Java classes to write CEDAR JSON Schema-based template instances</name>
 
   <scm>
-    <connection>scm:git:git@github.com:metadatacenter/cedar-archetype-instance-writer.git</connection>
-    <developerConnection>scm:git:git@github.com:metadatacenter/cedar-archetype-instance-writer.git</developerConnection>
+    <connection>scm:git:https://github.com/metadatacenter/cedar-archetype-instance-writer.git</connection>
+    <developerConnection>scm:git:https://github.com/metadatacenter/cedar-archetype-instance-writer.git</developerConnection>
     <url>https://github.com/metadatacenter/cedar-archetype-instance-writer</url>
-    <tag>HEAD</tag>
   </scm>
 
   <dependencies>
