--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,14 @@
   <parent>
     <groupId>org.metadatacenter</groupId>
     <artifactId>cedar-parent</artifactId>
-    <version>2.5.35</version>
+    <version>2.5.37-SNAPSHOT</version>
   </parent>
 
   <groupId>org.metadatacenter</groupId>
   <artifactId>cedar-archetype-instance-writer</artifactId>
+  <version>2.5.37-SNAPSHOT</version>
   <packaging>jar</packaging>
+
   <name>Minimal Java project that uses jsonschema2pojo to generate Java classes to write CEDAR JSON Schema-based template instances</name>
 
   <scm>
