--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
   <groupId>org.metadatacenter</groupId>
   <artifactId>cedar-archetype-instance-writer</artifactId>
-  <version>2.5.37-SNAPSHOT</version>
+  <version>2.5.37</version>
   <packaging>jar</packaging>
 
   <name>Minimal Java project that uses jsonschema2pojo to generate Java classes to write CEDAR JSON Schema-based template instances</name>
@@ -18,7 +18,7 @@
     <connection>scm:git:https://github.com/metadatacenter/cedar-archetype-instance-writer.git</connection>
     <developerConnection>scm:git:https://github.com/metadatacenter/cedar-archetype-instance-writer.git</developerConnection>
     <url>https://github.com/metadatacenter/cedar-archetype-instance-writer</url>
-    <tag>HEAD</tag>
+    <tag>release-2.5.37</tag>
   </scm>
 
   <dependencies>
