--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 
   <groupId>org.metadatacenter</groupId>
   <artifactId>cedar-archetype-instance-writer</artifactId>
+  <version>2.6.17-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>Minimal Java project that uses jsonschema2pojo to generate Java classes to write CEDAR JSON Schema-based template instances</name>
