--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
   <groupId>org.metadatacenter</groupId>
   <artifactId>cedar-archetype-instance-writer</artifactId>
-  <version>2.6.21-SNAPSHOT</version>
+  <version>2.6.21</version>
   <packaging>jar</packaging>
 
   <name>Minimal Java project that uses jsonschema2pojo to generate Java classes to write CEDAR JSON Schema-based template instances</name>
@@ -19,6 +19,7 @@
     <connection>scm:git:https://github.com/metadatacenter/cedar-archetype-instance-writer.git</connection>
     <developerConnection>scm:git:https://github.com/metadatacenter/cedar-archetype-instance-writer.git</developerConnection>
     <url>https://github.com/metadatacenter/cedar-archetype-instance-writer</url>
+    <tag>release-2.6.21</tag>
   </scm>
 
   <dependencies>
