--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,8 @@
   <version>2.6.24-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>Minimal Java project that uses jsonschema2pojo to generate Java classes to write CEDAR JSON Schema-based template instances</name>
+  <name>CEDAR Archetype Instance Writer</name>
+  <description>Minimal Java project that uses jsonschema2pojo to generate Java classes to write CEDAR JSON Schema-based template instances</description>
 
   <scm>
     <connection>scm:git:https://github.com/metadatacenter/cedar-archetype-instance-writer.git</connection>
