--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
   <groupId>org.metadatacenter</groupId>
   <artifactId>cedar-archetype-instance-writer</artifactId>
-  <version>2.6.24-SNAPSHOT</version>
+  <version>2.6.24</version>
   <packaging>jar</packaging>
 
   <name>CEDAR Archetype Instance Writer</name>
@@ -20,7 +20,7 @@
     <connection>scm:git:https://github.com/metadatacenter/cedar-archetype-instance-writer.git</connection>
     <developerConnection>scm:git:https://github.com/metadatacenter/cedar-archetype-instance-writer.git</developerConnection>
     <url>https://github.com/metadatacenter/cedar-archetype-instance-writer</url>
-    <tag>HEAD</tag>
+    <tag>release-2.6.24</tag>
   </scm>
 
   <dependencies>
