--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
   <groupId>org.metadatacenter</groupId>
   <artifactId>cedar-archetype-instance-writer</artifactId>
-  <version>2.6.43-SNAPSHOT</version>
+  <version>2.6.42</version>
   <packaging>jar</packaging>
 
   <name>CEDAR Archetype Instance Writer</name>
