--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
   <parent>
     <groupId>org.metadatacenter</groupId>
     <artifactId>cedar-parent</artifactId>
-    <version>2.6.57-SNAPSHOT</version>
+    <version>2.6.57</version>
   </parent>
 
   <groupId>org.metadatacenter</groupId>
   <artifactId>cedar-archetype-instance-writer</artifactId>
-  <version>2.6.57-SNAPSHOT</version>
+  <version>2.6.57</version>
   <packaging>jar</packaging>
 
   <name>CEDAR Archetype Instance Writer</name>
